css/styles.css
/* ... */
.hline {
  height: 1px;
  background: var(--button-link);
  margin-bottom: 15px;
  display: block;
}

.post-types {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.post-types__item {
  display: flex;
  justify-content: center;
  align-items: center;
  /* text-align: center; */
  width: 100%;
  cursor: pointer;
}

.post-types__item .fas,
post-types__item .fab {
  margin: 10px;
  font-size: 1.5rem;
}

.post-types__item .fa-video {
  color: var(--fb-red);
}

.post-types__item .fa-photo-video {
  color: var(--fb-green);
}

.post-types__item .fa-laugh-beam {
  color: var(--fb-yellow);
}

.photopost {
  padding: 0 0 20px;
  margin-bottom: 20px;
}

.photopost__info {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px 20px;
}

.photopost__left {
  display: flex;
  justify-content: center;
  align-items: center;
}

.photopost__left img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  margin: 10px 10px 10px 0px;
}

.photopost__details {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.photopost__name {
  font-size: 0.9rem;
  margin-bottom: 5px;
  font-weight: 400;
}
.photopost__date {
  font-size: 0.7rem;
  color: var(--light-color-text);
}

.photopost__info .fa-ellipsis-h {
  color: var(--light-color-text);
}

.photopost__description {
  padding: 0 20px;
  margin-bottom: 20px;
}

.photopost__image img {
  width: 100%;
  object-fit: cover;
  object-position: center;
}

.photopost__stats {
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
  color: var(--light-color-text);
  font-weight: 300;
  font-size: 0.9rem;
}

.photopost__stats-emojis {
  display: flex;
  justify-content: center;
  align-items: center;
}

.emoji-circle {
  display: flex;
  width: 22px;
  height: 22px;
  background: black;
  color: white;
  justify-content: center;
  align-items: center;
  font-size: 0.4rem;
  border-radius: 50%;
  border: 2px solid white;
  position: relative;
}

.emoji-circle:nth-child(1) {
  z-index: 3;
}
.emoji-circle:nth-child(2) {
  left: -5px;
  z-index: 2;
}
.emoji-circle:nth-child(3) {
  left: -10px;
  z-index: 1;
}

.emoji-circle--blue {
  background: linear-gradient(
    0deg,
    rgba(4, 60, 108, 1) 0%,
    rgba(10, 134, 240, 1) 100%
  );
}

.emoji-circle--red {
  background: linear-gradient(
    0deg,
    rgba(92, 15, 26, 1) 0%,
    rgba(238, 35, 64, 1) 100%
  );
}

.emoji-circle--yellow {
  background: #000;
  overflow: hidden;
}

.emoji-circle--blue .fa-thumbs-up {
  position: relative;
  top: -0.5px;
}

.emoji-circle--yellow .fa-surprise {
  color: rgba(246, 176, 36, 1);
  font-size: 1.3rem;
  position: relative;
  top: -1px;
}

.photopost__actions {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
}

.photopost__link {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--light-color-text);
  width: 100%;
  text-decoration: none;
}

.photopost__link .fas {
  margin-right: 10px;
}

.floatingmsg {
  position: fixed;
  bottom: 0;
  right: 20px;
}

.floatingmsg__bubble {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  box-shadow: 0px 5px 10px 0px var(--shadow-color);
  background: var(--button-link);
  margin-bottom: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  cursor: pointer;
}

.floatingmsg__bubble img {
  width: 50px;
  height: 50px;
  object-fit: cover;
  border-radius: 50%;
}

.floatingmsg__bubble:hover .fa-edit {
  color: var(--fb-blue);
}

.floatingmsg__notification {
  background: var(--fb-red);
  color: white;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  font-size: 0.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  border-radius: 50%;
  top: -5px;
  right: -5px;
  font-weight: 700;
  z-index: 3;
}

@media only screen and (max-width: 1300px) {
  .header__menu-tabs {
    display: none;
  }
  .feed {
    width: 100%;
  }
}
@media only screen and (max-width: 1000px) {
  .sidenav {
    display: none;
  }
}
@media only screen and (max-width: 768px) {
  .header__user-img {
    display: none;
  }
  .header__user-name {
    display: none;
  }
  .header__logo-search .fa-search {
    left: 12px;
    top: 12px;
  }
  .header__logo-search input[type="text"] {
    width: 40px;
    height: 40px;
    padding: 0;
  }
  .header__mobile-button {
    display: flex;
  }
  .feed {
    display: block;
  }
  .stories {
    flex-wrap: nowrap;
    z-index: 9;
    padding-bottom: 20px;
    overflow-x: scroll;
  }
  .stories__video-container {
    flex: 1 0 auto;
  }
  .content-area-feed {
    width: 100%;
  }
}
@media only screen and (max-width: 411px) {
  .header__account {
    display: none;
  }
  .post-types__title {
    display: none;
  }
  .newpost input[type="text"] {
    font-size: 1.1rem;
    
  }
  .header__logo-section {
    display: flex;
    justify-content:space-between;
    width: 100%;
  }
  .header__logo-section .header__logo-search input {
    width: 100%;
    overflow: hidden;
    margin-right: 5px;
  }
  

}

